--- a/hello/index.html
+++ b/hello/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>My Hello World Page</h1>
-        <p>Hello World! This is an HTML page!</p>
+        <p>Hello world! This is an HTML page!</p>
 
         <p>This is another line of text in my HTML page.</p>
     </body>
