--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <title>Ghostbusters Quotes</title>
     </head>
     <body>
         <header>
