finished lyric styling

--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -2,8 +2,82 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <title>Vokda Cranberry</title>
     </head>
-    
     <body>
+        <h1>Vodka Cranberry</h1>
+        <h3 id="artist"><a href="https://open.spotify.com/artist/4Uc8Dsxct0oMqx0P6i60ea">Conan Gray</a></h3>
+
+        <div id="spotify-embed">
+            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6Ql76QUTIXajTh9cVjrAZl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+
+        <div class="verse-1">
+            <p>You say we're fine, but your brown eyes</p>
+            <p>Are green this time, so you've been crying</p>
+            <p>It's in the way you say my name</p>
+            <p>So quick, so straight, it sounds the same</p>
+        </div>
+        
+        <div class="pre-chorus">
+            <p>As the time we took a break</p>
+            <p>February fourth through the sixteenth of May</p>
+            <p>So strange to be back at your place</p>
+            <p>Pretending like nothing has changed</p>
+            <p>Oh-oh-oh</p>
+        </div>
+
+        <div class="chorus">
+            <p>Speak up, I know you hate me</p>
+            <p>Looked at your picture and cried like a baby</p>
+            <p>Speak up, don't leave me waiting</p>
+            <p>Got way too drunk off a vodka cranberry</p>
+            <p>Called you up in the middle of the night</p>
+            <p>Wailing like an imbecile</p>
+            <p>If you won't end things, then I will</p>
+        </div>
+
+        <div clas="verse-2">
+            <p>Now I look dumb and you look mean</p>
+            <p>You casually steal back your T-shirt</p>
+            <p>And your Polo cap, yeah, I noticed that</p>
+            <p>Yeah, I notice everything you do</p>
+        </div>
+
+        <div class="pre-chorus">
+            <p>As the time we took a break</p>
+            <p>February fourth through the sixteenth of May</p>
+            <p>So strange to be back at your place</p>
+            <p>Pretending like nothing has changed</p>
+            <p>Oh-oh-oh</p>
+        </div>
+
+        <div class="chorus">
+            <p>Speak up, I know you hate me</p>
+            <p>Looked at your picture and cried like a baby</p>
+            <p>Speak up, don't leave me waiting</p>
+            <p>Got way too drunk off a vodka cranberry</p>
+            <p>Called you up in the middle of the night</p>
+            <p>Wailing like an imbecile</p>
+            <p>If you won't end things, then I will</p>
+        </div>
+
+        <div class="bridge">
+            <p>(Don't make me do this to you) I will</p>
+            <p>(Don't make me do this, but I will) I will</p>
+            <p>I will</p>
+            <p>I will, I will, I will</p>
+        </div>
+
+        <div class="chorus">
+            <p>Speak up, I know you hate me</p>
+            <p>Looked at your picture and cried like a baby</p>
+            <p>Speak up, don't leave me waiting</p>
+            <p>Got way too drunk off a vodka cranberry</p>
+            <p>Called you up in the middle of the night</p>
+            <p>Wailing like an imbecile</p>
+            <p>If you won't end things, then I will</p>
+        </div>
+
     </body>
 </html>
