--- a/recipe/research/index.html
+++ b/recipe/research/index.html
@@ -78,4 +78,26 @@
     <ul>
       <li>If the cake cracks: perhaps the oven was too hot. You can decorate over the crack if needed.</li>
       <li>If top is airy/fluffy but bottom is dense: possibly not enough folding of the egg whites.</li>
-      <li>If it doesn’t rise: maybe the egg whites weren’t stiff enough
+      <li>If it doesn’t rise: maybe the egg whites weren’t stiff enough, or temperature wasn’t high enough, or over-mixing happened.</li>
+      <li>For gluten-free version, substitute flour with sweet rice flour (Mochiko).</li>
+    </ul>
+  </section>
+
+  <section id="reviews">
+    <h2>Recipe Site Reviews</h2>
+    <article>
+      <h3><a href="https://www.koreanbapsang.com/">Korean Bapsang</a></h3>
+      <p>Great for authentic Korean home cooking with cultural notes. Recipes are clear and well organized, making them easy to follow.</p>
+    </article>
+    <article>
+      <h3><a href="https://www.justonecookbook.com/">Just One Cookbook</a></h3>
+      <p>Strong step-by-step photos and guides. Balances authentic Japanese flavors with easy access for beginners.</p>
+    </article>
+    <article>
+      <h3><a href="https://www.allrecipes.com/">Allrecipes</a></h3>
+      <p>Huge variety with ratings and user tips. Quality varies, but reviews help you pick reliable recipes.</p>
+    </article>
+  </section>
+  
+</body>
+</html>
