--- a/recipe/research/index.html
+++ b/recipe/research/index.html
@@ -98,6 +98,25 @@
       <p>Huge variety with ratings and user tips. Quality varies, but reviews help you pick reliable recipes.</p>
     </article>
   </section>
+
+  <section id="design-inspiration">
+    <h2>Design Inspiration (non-recipe sites)</h2>
+  
+    <article>
+      <h3><a href="https://developer.apple.com/design/" target="_blank" rel="noopener">Apple - Design Resources</a></h3>
+      <p>Clean, minimal layouts and strict visual hierarchy make content feel calm and focused—great for recipe steps and ingredient lists. Use bold imagery, generous white space, and a simple type scale to guide attention.</p>
+    </article>
+  
+    <article>
+      <h3><a href="https://medium.com/airbnb-design/building-a-visual-language-behind-the-scenes-of-our-airbnb-design-system-224748775e4e" target="_blank" rel="noopener">Airbnb - Visual Language Case Study</a></h3>
+      <p>Consistent visual language and reusable components create trust and ease for users across pages. A calm, conversational tone and clear affordances reduce anxiety around unfamiliar tasks—useful for tricky recipe techniques.</p>
+    </article>
+  
+    <article>
+      <h3><a href="https://www.awwwards.com/websites/" target="_blank" rel="noopener">Awwwards - Curated Design Examples</a></h3>
+      <p>A gallery of bold, experimental layouts that show how motion, micro-interactions, and unusual layouts can make a site memorable. Pick a few tasteful interactions to highlight steps or key tips without overwhelming readers.</p>
+    </article>
+  </section>
   
 </body>
 </html>
