--- a/exercises/using-images/index.html
+++ b/exercises/using-images/index.html
@@ -250,7 +250,7 @@
       
       <figure class="compressed-image">
         <!-- your <img> here... --> <img src="images/shelf-cloud-wide.jpg" alt="compressed cloud picture">
-        <figcaption><!-- ---px wide, --% jpeg compression, --KB --> 1680px wide, 50% compression, 143kb</figcaption>
+        <figcaption><!-- ---px wide, --% jpeg compression, --KB --> 1680px wide, 50% compression, 143 KB</figcaption>
       </figure>
         
 
