grid exercise finished

--- a/exercises/grids/index.html
+++ b/exercises/grids/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Building Grids</title>
     <link rel="stylesheet" href="https://wudesign.me/resources/basic-layout/css/styles.css">
-  </head>
+    <link rel="stylesheet" href="styles.css">
+</head>
   <body>
 
     <h1>Building Grids</h1>
@@ -49,6 +50,34 @@
         <li>
           <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
           <div>Abram Siemsen</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Miles Morales</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peni Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Gwen Stacy</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Porker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Hobi Browne</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Pavitr Prabhaker</div>
         </li>
         <!-- Add copies of the <li> element here, and change the names. (We can use the generic portait image for everybody.) -->
       </ul>
@@ -110,6 +139,41 @@
       </ol>
 
       <!-- <ul class="grid using-flex">...</ul> goes here -->
+      <ul class="grid using-flex">
+        <li>
+          <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+          <div>Abram Siemsen</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Miles Morales</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peni Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Gwen Stacy</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Porker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Hobi Browne</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Pavitr Prabhaker</div>
+        </li>
+        <!-- Add copies of the <li> element here, and change the names. (We can use the generic portait image for everybody.) -->
+      </ul>
 
       <p>Look, we picked up a bunch of existing styles from the shared <code>grid</code> class, so our images are already sized, the text is centered, etc. Hurray for shared classes to avoid repetition!</p>
 
@@ -136,6 +200,41 @@
       </ol>
 
       <!-- <ul class="grid using-grid">...</ul> goes here -->
+      <ul class="grid using-grid">
+        <li>
+          <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+          <div>Abram Siemsen</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Miles Morales</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peni Parker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Gwen Stacy</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Peter Porker</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Hobi Browne</div>
+        </li>
+        <li>
+            <img src="http://wudesign.me/resources/basic-layout/images/portrait.png" alt="Abram Siemsen portrait">
+            <div>Pavitr Prabhaker</div>
+        </li>
+        <!-- Add copies of the <li> element here, and change the names. (We can use the generic portait image for everybody.) -->
+      </ul>
 
       <ol class="instructions">
         <li>Create a selector for this grid's <code class="tag">ul</code> using it's specific class, and add the following rules:</li>
