content and styling

--- a/recipe/complete/index.html
+++ b/recipe/complete/index.html
@@ -9,26 +9,27 @@
     </head>
 
     <body>
+        <header>
+            <div id="header-container">
+                <img id="first-cheesecake" src="images/cheesecake-3.jpg" alt="slice of Japanese cheesecake">
+                <h1>JAPANESE CHEESECAKE</h1>
+                <section id="information">
+                    <p>prep: 20 minutes</p>
+                    <p>cook: 70 minutes</p>
+                    <p>total: 1 hour 30 minutes</p>
+                    <p>yields: 6 servings</p>
+                </section>
+                <section id="dietary-restrictions">
+                    <h3>Dietary Restrictions</h3>
+                    <ul>
+                        <li>eggs</li>
+                        <li>dairy</li>
+                        <li>gluten</li>
+                    </ul>
+                </section>
+            </div>
+        </header>
         <main>
-            <header>
-                <h1>Japanese Cheesecake</h1>
-                <img src="images/cheesecake-3.jpg" alt="slice of Japanese cheesecake">
-            </header>
-            <section id="information">
-                <p>prep: 20 minutes</p>
-                <p>cook: 70 minutes</p>
-                <p>total: 1 hour 30 minutes</p>
-                <p>yields: </p>
-            </section>
-
-            <section id="dietary-restrictions">
-                <ul>
-                    <li>eggs</li>
-                    <li>dairy</li>
-                    <li>gluten</li>
-                </ul>
-            </section>
-
             <section id="ingredients">
                 <h2>Ingredients</h2>
                 <h3>Egg White Meringue (Stiff Peaks)</h3>
@@ -48,7 +49,7 @@
                   <li>Optional: vanilla extract, lemon zest/juice for flavor</li>
                 </ul>
                 <p>Optional toppings: strawberries, confectioner sugar, fruits, honey, matcha powder, etc.</p>
-              </section>
+            </section>
 
               <section id="instructions">
                 <h2>Instructions</h2>
