--- a/recipe/complete/index.html
+++ b/recipe/complete/index.html
@@ -57,75 +57,87 @@
                 <ul>
                     <li>This recipe requires a cooling time of approximately 1–2 hours and a chilling time of at least 4–6 hours (or overnight) after baking</li>
                 </ul>
-                <h4>Prepare Cake Pan</h4>
-                <ol>
-                    <li>
-                        Cut parchment paper to line bottom and sides of cake pan: cut one 9-inch (23 cm) 
-                        diameter circle and one rectangular strip 4x30 inches (10x76 cm).
-                    </li>
-                    <li>Cut two strips of paper 2x30 inches (5x76 cm) each. These will be "straps" to lift the baked cake from the pan.</li>
-                    <li>Grease cake pan and parchment paper with 1 tbsp unsalted butter (no need to use all butter)</li>
-                    <li>Crisscross straps to form an "X" on bottom of pan. Allow excess paper to hang over sides.</li>
-                    <li>Line bottom and sides with greased parchment paper so greased sides touch cake pan.</li>
-                </ol>
-                <h4>Preheat Oven and Prepare Double Boiler</h4>
-                <ol>
-                    <li>
-                        Preheat to 350ºF (180ºC). For convection oven, reduce temperature by 25ºF (15ºC).
-                        <b>Note</b>: You will be baking at 320ºF (160ºC). However, we’ll preheat a bit higher because your oven will lose some heat when you open it to place the cheesecake inside.
-                    </li>
-                    <li>
-                        To prepare double boiler: set medium saucepan with 2 inches (5 cm) of water over high heat. Bring to a simmer, then cover
-                        and reduce heat to maintain a steady simmer.
-                    </li>
-                </ol>
-                <h4>Making Cake Batter</h4>
-                <ol>
-                    <li>Gather listed ingredients.</li>
-                    <li>Separate 6 large egg yolks; place whites back into fridge.</li>
-                    <li>
-                        In large bowl: add 10.6oz cream cheese, 4tbsp unsalted butter, 200mL heavy cream, 4.5tbsp sugar. 
-                        Rest bowl on saucepan above simmering water.
-                    </li>
-                    <li>Mash cream cheese and butter until softened. Use hand whisk to blend together, then remove bowl from heat.</li>
-                    <li>Whisk egg yolks one at a time into mixture. *Make sure each yolk is blended well before adding next one.</li>
-                    <li>Sift ⅔cup cake flour with fine-mesh strainer. Whisk and blend together.</li>
-                    <li>Pass batter through strainer into clean large bowl to create silky texture.</li>
-                    <li>Optional: Add zest of ½ lemon. In a separate small bowl: squeeze juice from lemon. Add 2tbsp lemon juice to batter and whisk well to blend.</li>
-                    <ul>Or add in other optional flavorings of choice.</ul>
-                </ol>
-                <h4>Set Up Bain-Marie (Water Bath)</h4>
-                <ol>
-                    <li>Put large baking sheet inside preheating oven and pour in hot water until halfway up sides. Close oven.</li>
-                </ol>
-                <h4>Mixing in Egg Whites</h4>
-                <ol>
-                    <li>Add the cold egg whites into the dry, clean mixing bowl of a stand mixer.</li>
-                    <li>Start whisking on medium speed until egg whites become opaque, foamy, and bubbly (about 2 minutes). Slowly add ½cup sugar (⅓ at a time) while mixer runs.</li>
-                    <li>Increase mixer speed to high and beat whites until you have FIRM peaks. Egg whites should cling to whisk and hold shape fairly well, but the tip of the peak should fold back on itself.</li>
-                    <li>Using hand whisk: mix one-third of egg whites into cake batter until incorporated. Then gently fold in another one-third.</li>
-                    <li>Pour mixture back into mixer bowl (with last one-third of egg whites still in it). Fold very gently until just combined.</li>
-                    <li>Pour this batter into prepared cake pan. Tap on counter a few times to release air pockets.</li>
-                </ol>
-                <h4>Bake Cheesecake</h4>
-                <ol>
-                    <li>Place cake pan onto baking sheet with bain-marie. <b>Reduce oven temperature to 320ºF (160ºC)—25ºF (15ºC) lower for a convection oven—and bake for 70–75 minutes.</b></li>
-                    <li>Reduce oven temperature to 300ºF (150ºC) and bake for another 10 minutes, or until top is golden brown. To test, insert skewer into cake. If there is no wet batter, it's done.</li>
-                    <li>Leave cake inside oven.</li>
-                </ol>
-                <h4>Cooling</h4>
-                <ol>
-                    <li>Turn off oven and leave door slightly ajar for 15-20 minutes. Cake should slowly shrink down to half its height.</li>
-                    <li>After 15-20 minutes, remove cake pan.</li>
-                    <li>Gently lift out cheesecake using the paper straps (may require help from another set of hands); place on plate.</li>
-                    <li>Remove parchment paper from sides, but not bottom. Let cool.</li>
-                </ol>
-                <h4>To Serve</h4>
-                <ol>
-                    <li>Allow cheesecake to cool completely in fridge for at least 4-6 hours, or overnight.</li>
-                    <li>For softer texture, take cheesecake out of the fridge about 10-15 minutes before serving.</li>
-                    <ul>You can store in fridge for 3-4 days or in freezer for 3-4 weeks. If frozen, thaw overnight in fridge.</ul>
-                </ol>
+                <div>
+                    <h4>Prepare Cake Pan</h4>
+                    <ol>
+                        <li>
+                            Cut parchment paper to line bottom and sides of cake pan: cut one 9-inch (23 cm) 
+                            diameter circle and one rectangular strip 4x30 inches (10x76 cm).
+                        </li>
+                        <li>Cut two strips of paper 2x30 inches (5x76 cm) each. These will be "straps" to lift the baked cake from the pan.</li>
+                        <li>Grease cake pan and parchment paper with 1 tbsp unsalted butter (no need to use all butter)</li>
+                        <li>Crisscross straps to form an "X" on bottom of pan. Allow excess paper to hang over sides.</li>
+                        <li>Line bottom and sides with greased parchment paper so greased sides touch cake pan.</li>
+                    </ol>
+                </div>
+                <div>
+                    <h4>Preheat Oven and Prepare Double Boiler</h4>
+                    <ol>
+                        <li>
+                            Preheat to 350ºF (180ºC). For convection oven, reduce temperature by 25ºF (15ºC).
+                            <b>Note</b>: You will be baking at 320ºF (160ºC). However, we’ll preheat a bit higher because your oven will lose some heat when you open it to place the cheesecake inside.
+                        </li>
+                        <li>
+                            To prepare double boiler: set medium saucepan with 2 inches (5 cm) of water over high heat. Bring to a simmer, then cover
+                            and reduce heat to maintain a steady simmer.
+                        </li>
+                    </ol>
+                </div>
+                <div>
+                    <h4>Making Cake Batter</h4>
+                    <ol>
+                        <li>Gather listed ingredients.</li>
+                        <li>Separate 6 large egg yolks; place whites back into fridge.</li>
+                        <li>
+                            In large bowl: add 10.6oz cream cheese, 4tbsp unsalted butter, 200mL heavy cream, 4.5tbsp sugar. 
+                            Rest bowl on saucepan above simmering water.
+                        </li>
+                        <li>Mash cream cheese and butter until softened. Use hand whisk to blend together, then remove bowl from heat.</li>
+                        <li>Whisk egg yolks one at a time into mixture. *Make sure each yolk is blended well before adding next one.</li>
+                        <li>Sift ⅔cup cake flour with fine-mesh strainer. Whisk and blend together.</li>
+                        <li>Pass batter through strainer into clean large bowl to create silky texture.</li>
+                        <li>Optional: Add zest of ½ lemon. In a separate small bowl: squeeze juice from lemon. Add 2tbsp lemon juice to batter and whisk well to blend.</li>
+                        <ul>Or add in other optional flavorings of choice.</ul>
+                    </ol>
+                </div>
+                <div>
+                    <h4>Set Up Bain-Marie (Water Bath)</h4>
+                    <ol>
+                        <li>Put large baking sheet inside preheating oven and pour in hot water until halfway up sides. Close oven.</li>
+                    </ol>
+                    <h4>Mixing in Egg Whites</h4>
+                    <ol>
+                        <li>Add the cold egg whites into the dry, clean mixing bowl of a stand mixer.</li>
+                        <li>Start whisking on medium speed until egg whites become opaque, foamy, and bubbly (about 2 minutes). Slowly add ½cup sugar (⅓ at a time) while mixer runs.</li>
+                        <li>Increase mixer speed to high and beat whites until you have FIRM peaks. Egg whites should cling to whisk and hold shape fairly well, but the tip of the peak should fold back on itself.</li>
+                        <li>Using hand whisk: mix one-third of egg whites into cake batter until incorporated. Then gently fold in another one-third.</li>
+                        <li>Pour mixture back into mixer bowl (with last one-third of egg whites still in it). Fold very gently until just combined.</li>
+                        <li>Pour this batter into prepared cake pan. Tap on counter a few times to release air pockets.</li>
+                    </ol>
+                </div>
+                <div>
+                    <h4>Bake Cheesecake</h4>
+                    <ol>
+                        <li>Place cake pan onto baking sheet with bain-marie. <b>Reduce oven temperature to 320ºF (160ºC)—25ºF (15ºC) lower for a convection oven—and bake for 70–75 minutes.</b></li>
+                        <li>Reduce oven temperature to 300ºF (150ºC) and bake for another 10 minutes, or until top is golden brown. To test, insert skewer into cake. If there is no wet batter, it's done.</li>
+                        <li>Leave cake inside oven.</li>
+                    </ol>
+                    <h4>Cooling</h4>
+                    <ol>
+                        <li>Turn off oven and leave door slightly ajar for 15-20 minutes. Cake should slowly shrink down to half its height.</li>
+                        <li>After 15-20 minutes, remove cake pan.</li>
+                        <li>Gently lift out cheesecake using the paper straps (may require help from another set of hands); place on plate.</li>
+                        <li>Remove parchment paper from sides, but not bottom. Let cool.</li>
+                    </ol>
+                </div>
+                <div>
+                    <h4>To Serve</h4>
+                    <ol>
+                        <li>Allow cheesecake to cool completely in fridge for at least 4-6 hours, or overnight.</li>
+                        <li>For softer texture, take cheesecake out of the fridge about 10-15 minutes before serving.</li>
+                        <ul>You can store in fridge for 3-4 days or in freezer for 3-4 weeks. If frozen, thaw overnight in fridge.</ul>
+                    </ol>
+                </div>
             </section>
         </main>
     </body>
