--- a/recipe/complete/index.html
+++ b/recipe/complete/index.html
@@ -69,17 +69,14 @@
                         <li>Crisscross straps to form an "X" on bottom of pan. Allow excess paper to hang over sides.</li>
                         <li>Line bottom and sides with greased parchment paper so greased sides touch cake pan.</li>
                     </ol>
+                    <img src="images/parchment.jpg" alt="putting parchment paper into pan">
                 </div>
                 <div>
-                    <h4>Preheat Oven and Prepare Double Boiler</h4>
+                    <h4>Preheat Oven</h4>
                     <ol>
                         <li>
                             Preheat to 350ºF (180ºC). For convection oven, reduce temperature by 25ºF (15ºC).
                             <b>Note</b>: You will be baking at 320ºF (160ºC). However, we’ll preheat a bit higher because your oven will lose some heat when you open it to place the cheesecake inside.
-                        </li>
-                        <li>
-                            To prepare double boiler: set medium saucepan with 2 inches (5 cm) of water over high heat. Bring to a simmer, then cover
-                            and reduce heat to maintain a steady simmer.
                         </li>
                     </ol>
                 </div>
@@ -99,12 +96,17 @@
                         <li>Optional: Add zest of ½ lemon. In a separate small bowl: squeeze juice from lemon. Add 2tbsp lemon juice to batter and whisk well to blend.</li>
                         <ul>Or add in other optional flavorings of choice.</ul>
                     </ol>
+                    <div class="two-images">
+                        <img src="images/batter-1.jpg">
+                        <img src="images/batter-2.jpg">
+                    </div>
                 </div>
                 <div>
                     <h4>Set Up Bain-Marie (Water Bath)</h4>
                     <ol>
                         <li>Put large baking sheet inside preheating oven and pour in hot water until halfway up sides. Close oven.</li>
                     </ol>
+                    <img src="images/bain-marie.jpg" alt="bain marie">
                     <h4>Mixing in Egg Whites</h4>
                     <ol>
                         <li>Add the cold egg whites into the dry, clean mixing bowl of a stand mixer.</li>
@@ -114,6 +116,10 @@
                         <li>Pour mixture back into mixer bowl (with last one-third of egg whites still in it). Fold very gently until just combined.</li>
                         <li>Pour this batter into prepared cake pan. Tap on counter a few times to release air pockets.</li>
                     </ol>
+                    <div class="two-images">
+                        <img src="images/meringue-1.jpg">
+                        <img src="images/meringue-2.jpg">
+                    </div>
                 </div>
                 <div>
                     <h4>Bake Cheesecake</h4>
@@ -122,6 +128,10 @@
                         <li>Reduce oven temperature to 300ºF (150ºC) and bake for another 10 minutes, or until top is golden brown. To test, insert skewer into cake. If there is no wet batter, it's done.</li>
                         <li>Leave cake inside oven.</li>
                     </ol>
+                    <div class="two-images">
+                        <img src="images/oven-1.jpg">
+                        <img src="images/oven-2.jpg">
+                    </div>
                     <h4>Cooling</h4>
                     <ol>
                         <li>Turn off oven and leave door slightly ajar for 15-20 minutes. Cake should slowly shrink down to half its height.</li>
@@ -137,6 +147,7 @@
                         <li>For softer texture, take cheesecake out of the fridge about 10-15 minutes before serving.</li>
                         <ul>You can store in fridge for 3-4 days or in freezer for 3-4 weeks. If frozen, thaw overnight in fridge.</ul>
                     </ol>
+                    <img src="images/final-cheesecake.jpg">
                 </div>
             </section>
         </main>
