--- a/exercises/building-a-button/index.html
+++ b/exercises/building-a-button/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Building a Button</title>
   <script src="https://kit.fontawesome.com/049657f600.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://wudesign.me/resources/basic-layout/css/styles.css">
-    <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
