--- a/buttons/index.html
+++ b/buttons/index.html
@@ -5,15 +5,28 @@
     <title>Buttons — Sol Bae</title>
     <script src="https://kit.fontawesome.com/049657f600.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://wudesign.me/resources/basic-layout/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Button Styling — Sol Bae</h1>
-    </header>
     <main>
-        
+        <h1>Button Styling — Sol Bae</h1>
+        <div class="button-container">
+            <a href="http://www.spotify.com" target="_blank" id="btn-spotify">Spotify</a>
+        </div>
+        <div class="button-container">
+            <!--hover: draw line-->
+            <a href="http://www.fitbit.com/home" target="_blank" id="btn-fitbit">Fitbit</a>
+        </div>
+        <div class="button-container">
+            <!--hover: draw line-->
+            <a href="http://www.lyft.com/home" target="_blank" id="btn-lyft">
+                <img src="images/lyft-white-on-pink.svg" alt="white logo on pink background">
+            </a>
+        </div>
     </main>
 </body>
 </html>
