--- a/buttons/index.html
+++ b/buttons/index.html
@@ -18,11 +18,9 @@
             <a href="http://www.spotify.com" target="_blank" id="btn-spotify">Spotify</a>
         </div>
         <div class="button-container">
-            <!--hover: draw line-->
-            <a href="http://www.fitbit.com/home" target="_blank" id="btn-fitbit">Fitbit</a>
+            <a href="http://www.samsung.com/us/" target="_blank" id="btn-samsung"></a>
         </div>
         <div class="button-container">
-            <!--hover: draw line-->
             <a href="http://www.lyft.com/home" target="_blank" id="btn-lyft">
                 <img src="images/lyft-white-on-pink.svg" alt="white logo on pink background">
             </a>
