missouri botanical garden button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/qps1vkn.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -22,7 +23,13 @@
         </div>
         <div class="button-container">
             <a href="http://www.lyft.com/home" target="_blank" id="btn-lyft">
-                <img src="images/lyft-white-on-pink.svg" alt="white logo on pink background">
+                <img src="images/lyft-white-on-pink.svg" alt="white lyft logo on pink background">
+            </a>
+        </div>
+        <div class="button-container">
+            <a href="https://www.missouribotanicalgarden.org/" target="_blank" id="btn-garden">
+                <img src="images/garden-logo-icon.png" alt="missouri botanical garden logo">
+                <span>MISSOURI BOTANICAL GARDEN</span>
             </a>
         </div>
     </main>
