--- a/buttons/index.html
+++ b/buttons/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttons — Sol Bae</title>
     <script src="https://kit.fontawesome.com/049657f600.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://wudesign.me/resources/basic-layout/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -31,6 +30,9 @@
                 <img src="images/garden-logo-icon.png" alt="missouri botanical garden logo">
                 <span>MISSOURI BOTANICAL GARDEN</span>
             </a>
+        </div>
+        <div class="button-container">
+            <a href="https://www.missouribotanicalgarden.org/" target="_blank" id="btn-michael">MICHAEL KORS</a>
         </div>
     </main>
 </body>
