pastaria button added

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/qps1vkn.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -32,7 +35,12 @@
             </a>
         </div>
         <div class="button-container">
-            <a href="https://www.missouribotanicalgarden.org/" target="_blank" id="btn-michael">MICHAEL KORS</a>
+            <a href="http://www.michaelkors.com/" target="_blank" id="btn-michael">MICHAEL KORS</a>
+        </div>
+        <div class="button-container">
+            <a href="https://pastariadeliandwine.com/" target="_blank" id="btn-pastaria">
+                <span>&amp;</span>
+            </a>
         </div>
     </main>
 </body>
