hasbro button added

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -42,6 +42,9 @@
                 <span>&amp;</span>
             </a>
         </div>
+        <div class="button-container">
+            <a href="http://nerf.hasbro.com/en-us" target="_blank" id="btn-hasbro"></a>
+        </div>
     </main>
 </body>
 </html>
