added tesla button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -45,6 +45,11 @@
         <div class="button-container">
             <a href="http://nerf.hasbro.com/en-us" target="_blank" id="btn-hasbro"></a>
         </div>
+        <div class="button-container">
+            <a href="http://www.teslamotors.com/" target="_blank" id="btn-tesla">
+                <img src="images/tesla-text.png" alt="tesla logo">
+            </a>
+        </div>
     </main>
 </body>
 </html>
