added mollyjogger button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -49,6 +52,9 @@
             <a href="http://www.teslamotors.com/" target="_blank" id="btn-tesla">
                 <img src="images/tesla-text.png" alt="tesla logo">
             </a>
+        </div>
+        <div class="button-container">
+            <a href="https://www.mollyjogger.com/" target="_blank" id="btn-molly">Mollyjogger</a>
         </div>
     </main>
 </body>
