added craigslist button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttons — Sol Bae</title>
-    <script src="https://kit.fontawesome.com/049657f600.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://kit.fontawesome.com/ce4aa37f23.js" crossorigin="anonymous"></script>    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/qps1vkn.css">
@@ -55,6 +54,12 @@
         </div>
         <div class="button-container">
             <a href="https://www.mollyjogger.com/" target="_blank" id="btn-molly">Mollyjogger</a>
+        </div>
+        <div class="button-container" id="craig-container">
+            <a href="https://stlouis.craigslist.org/" target="_blank" id="btn-craig">
+                <i id="original-peace" class="fas fa-light fa-peace fa-8x"></i>
+                <i class="fas fa-light fa-peace fa-bounce fa-8x"></i>
+            </a>
         </div>
     </main>
 </body>
