finished buttons assignment

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -61,6 +61,9 @@
                 <i class="fas fa-light fa-peace fa-bounce fa-8x"></i>
             </a>
         </div>
+        <div class="button-container">
+            <a href="https://www.hsn.com/" target="_blank" id="btn-hsn"></a>
+        </div>
     </main>
 </body>
 </html>
