--- a/microsite/mockups-a/index.html
+++ b/microsite/mockups-a/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Mockup A</h1>
-        <img src="/microsite/images/mockup-a-desktop.png">
-        <img src="/microsite/images/mockup-a-mobile.png">
+        <img src="images/mockup-a-desktop.png">
+        <img src="images/mockup-a-mobile.png">
     </body>
 </html>
