--- a/microsite/mockups-b/index.html
+++ b/microsite/mockups-b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Mockup B</h1>
-        <img src="/microsite/images/mockup-b-desktop.png">
-        <img src="/microsite/images/mockup-b-mobile.png">
+        <img src="images/mockup-b-desktop.png">
+        <img src="images/mockup-b-mobile.png">
     </body>
 </html>
 
