fixed paragraph length

--- a/microsite/final/key-designers.html
+++ b/microsite/final/key-designers.html
@@ -79,24 +79,24 @@
         Memphis included contributions from many international architects and designers:
       </p>
       <div class="roster-grid">
-        <div class="roster-item"><h4>Ettore Sottsass</h4></div>
-        <div class="roster-item"><h4>Martine Bedin</h4></div>
-        <div class="roster-item"><h4>Andrea Branzi</h4></div>
-        <div class="roster-item"><h4>Aldo Cibic</h4></div>
-        <div class="roster-item"><h4>Michele De Lucchi</h4></div>
-        <div class="roster-item"><h4>Nathalie Du Pasquier</h4></div>
-        <div class="roster-item"><h4>Michael Graves</h4></div>
-        <div class="roster-item"><h4>Hans Hollein</h4></div>
-        <div class="roster-item"><h4>Arata Isozaki</h4></div>
-        <div class="roster-item"><h4>Shiro Kuramata</h4></div>
-        <div class="roster-item"><h4>Javier Mariscal</h4></div>
-        <div class="roster-item"><h4>Alessandro Mendini</h4></div>
-        <div class="roster-item"><h4>Paola Navone</h4></div>
-        <div class="roster-item"><h4>Peter Shire</h4></div>
-        <div class="roster-item"><h4>George J. Sowden</h4></div>
-        <div class="roster-item"><h4>Masanori Umeda</h4></div>
-        <div class="roster-item"><h4>Marco Zanini</h4></div>
-        <div class="roster-item"><h4>Gerard Taylor</h4></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Ettore_Sottsass" target="_blank"><h4>Ettore Sottsass</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Martine_Bedin" target="_blank"><h4>Martine Bedin</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Andrea_Branzi" target="_blank"><h4>Andrea Branzi</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Aldo_Cibic" target="_blank"><h4>Aldo Cibic</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Michele_De_Lucchi" target="_blank"><h4>Michele De Lucchi</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Nathalie_Du_Pasquier" target="_blank"><h4>Nathalie Du Pasquier</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Michael_Graves" target="_blank"><h4>Michael Graves</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Hans_Hollein" target="_blank"><h4>Hans Hollein</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Arata_Isozaki" target="_blank"><h4>Arata Isozaki</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Shiro_Kuramata" target="_blank"><h4>Shiro Kuramata</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Javier_Mariscal" target="_blank"><h4>Javier Mariscal</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Alessandro_Mendini" target="_blank"><h4>Alessandro Mendini</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Paola_Navone" target="_blank"><h4>Paola Navone</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Peter_Shire" target="_blank"><h4>Peter Shire</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/George_Sowden" target="_blank"><h4>George J. Sowden</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Masanori_Umeda" target="_blank"><h4>Masanori Umeda</h4></a></div>
+        <div class="roster-item"><a href="https://en.wikipedia.org/wiki/Marco_Zanini" target="_blank"><h4>Marco Zanini</h4></a></div>
+        <div class="roster-item"><a href="https://www.theguardian.com/artanddesign/2025/jul/04/gerard-taylor-obituary" target="_blank"><h4>Gerard Taylor</h4></a></div>
       </div>
     </div>
   </div>
